--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,30 @@ p.mb-5 {
 }
 
 
+
+/* 下拉選單樣式 */
+.dropdown-toggle::after {
+  display: none !important; /* 移除向下三角形 */
+}
+.dropdown-menu {
+  background-color: #ffffff !important;
+  border: 1px solid #837e7a !important;
+  border-radius: 5px !important;
+}
+.dropdown-item {
+  color: #5C4033 !important;
+  font-weight: 500;
+  transition: all 0.3s ease !important;
+  border-bottom: 1px solid #A67B5B !important; /* 項目間分隔線 */
+}
+.dropdown-item:last-child {
+  border-bottom: none !important; /* 最後一項無分隔線 */
+}
+.dropdown-item:hover {
+  background-color: #E99922 !important; /* 滑鼠移過去變黃色 */
+  color: #FFF !important;
+}
+
 a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
@@ -212,13 +236,13 @@ h1, h2, h3, h4, h5,
     -webkit-box-shadow: none !important;
     box-shadow: none !important; }
   .btn.btn-primary {
-    background: #46ddb0;
-    border-color: #46ddb0;
+    background: #e99922;
+    border-color: #e99922;
     color: #fff; }
     .btn.btn-primary:hover {
       background: #fff;
       border-color: #fff;
-      color: #46ddb0; }
+      color: #e99922; }
     .btn.btn-primary.btn-black--hover:hover {
       background: #666666;
       color: #fff; }
@@ -234,13 +258,13 @@ h1, h2, h3, h4, h5,
   border-radius: 30px;
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
   .form-control:active, .form-control:focus {
-    border-color: #46ddb0; }
+    border-color: #e99922; }
   .form-control:hover, .form-control:active, .form-control:focus {
     -webkit-box-shadow: none !important;
     box-shadow: none !important; }
 
 .site-section {
-  padding: 2.5em 0; }
+  padding: 1.5em 0; }
   @media (min-width: 768px) {
     .site-section {
       padding: 5em 0; } }
@@ -388,7 +412,7 @@ h1, h2, h3, h4, h5,
   .ul-check.success li:before {
     color: #8bc34a; }
   .ul-check.primary li:before {
-    color: #46ddb0; }
+    color: #E99922; }
 
 .select-wrap, .wrap-icon {
   position: relative; }
@@ -422,7 +446,7 @@ h1, h2, h3, h4, h5,
   .site-navbar .site-navigation .site-menu {
     margin-bottom: 0; }
     .site-navbar .site-navigation .site-menu .active {
-      color: #46ddb0;
+      color: #E99922;
       display: inline-block;
       padding: 5px 20px; }
     .site-navbar .site-navigation .site-menu a {
@@ -436,7 +460,7 @@ h1, h2, h3, h4, h5,
         display: inline-block;
         text-decoration: none !important; }
         .site-navbar .site-navigation .site-menu > li > a:hover {
-          color: #46ddb0; }
+          color: #E99922; }
     .site-navbar .site-navigation .site-menu .has-children {
       position: relative; }
       .site-navbar .site-navigation .site-menu .has-children > a {
@@ -458,7 +482,7 @@ h1, h2, h3, h4, h5,
         top: 100%;
         position: absolute;
         text-align: left;
-        border-top: 2px solid #46ddb0;
+        border-top: 2px solid #E99922;
         -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
         box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
         border-left: 1px solid #edf0f5;
@@ -495,7 +519,7 @@ h1, h2, h3, h4, h5,
           transition: 0s all;
           color: #343a40; }
         .site-navbar .site-navigation .site-menu .has-children .dropdown .active > a {
-          color: #46ddb0 !important; }
+          color: #e99922 !important; }
         .site-navbar .site-navigation .site-menu .has-children .dropdown > li {
           list-style: none;
           padding: 0;
@@ -517,7 +541,7 @@ h1, h2, h3, h4, h5,
             background: #f4f5f9;
             color: #25262a; }
       .site-navbar .site-navigation .site-menu .has-children:hover > a, .site-navbar .site-navigation .site-menu .has-children:focus > a, .site-navbar .site-navigation .site-menu .has-children:active > a {
-        color: #46ddb0; }
+        color: #e99922; }
       .site-navbar .site-navigation .site-menu .has-children:hover, .site-navbar .site-navigation .site-menu .has-children:focus, .site-navbar .site-navigation .site-menu .has-children:active {
         cursor: pointer; }
         .site-navbar .site-navigation .site-menu .has-children:hover > .dropdown, .site-navbar .site-navigation .site-menu .has-children:focus > .dropdown, .site-navbar .site-navigation .site-menu .has-children:active > .dropdown {
@@ -597,12 +621,12 @@ h1, h2, h3, h4, h5,
       position: relative;
       color: #212529; }
       .site-mobile-menu .site-nav-wrap a:hover {
-        color: #46ddb0; }
+        color: #e99922; }
     .site-mobile-menu .site-nav-wrap li {
       position: relative;
       display: block; }
       .site-mobile-menu .site-nav-wrap li .active {
-        color: #46ddb0; }
+        color: #e99922; }
     .site-mobile-menu .site-nav-wrap .arrow-collapse {
       position: absolute;
       right: 0px;
@@ -786,7 +810,7 @@ h1, h2, h3, h4, h5,
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(70, 221, 176, 0.8);
+    background: #e99922;
     z-index: 2;
     height: 100%;
     width: 100%;
@@ -1007,7 +1031,7 @@ h1, h2, h3, h4, h5,
     font-weight: bold;
     color: #cccccc; }
     .site-block-tab .nav-item > a:hover, .site-block-tab .nav-item > a.active {
-      border-bottom: 2px solid #46ddb0;
+      border-bottom: 2px solid #e99922;
       color: #000; }
 
 .block-13, .slide-one-item {
@@ -1093,7 +1117,7 @@ h1, h2, h3, h4, h5,
       border-radius: 50%;
       background: #dee2e6; }
     .slide-one-item .owl-dots .owl-dot.active span {
-      background: #46ddb0; }
+      background: #e99922; }
 
 .block-12 {
   position: relative; }
@@ -1148,7 +1172,7 @@ h1, h2, h3, h4, h5,
         width: 80px;
         height: 4px;
         margin-top: -4px;
-        background: #46ddb0;
+        background: #e99922;
         top: 0; }
       .block-12 .text .text-inner .heading {
         font-size: 20px;
@@ -1171,7 +1195,7 @@ h1, h2, h3, h4, h5,
     display: block;
     border-radius: 50%;
     opacity: 1;
-    color: #46ddb0 !important; }
+    color: #e99922 !important; }
     .block-16 figure .play-button:hover {
       opacity: 1; }
     .block-16 figure .play-button > span {
@@ -1209,7 +1233,7 @@ h1, h2, h3, h4, h5,
   color: #999999; }
 
 .block-25 ul li a .meta {
-  color: #46ddb0; }
+  color: #e99922; }
 
 .block-25 ul li a:hover img {
   opacity: .5; }
@@ -1378,7 +1402,7 @@ h1, h2, h3, h4, h5,
   margin-top: -100px; }
 
 .feature-1, .free-quote, .feature-3 {
-  background: #46ddb0;
+  background: #e99922;
   padding: 30px 50px;
   color: rgba(255, 255, 255, 0.6);
   font-size: 15px; }
@@ -1434,7 +1458,7 @@ h1, h2, h3, h4, h5,
       font-style: italic; }
 
 .feature-3 {
-  background: #28d7a3; }
+  background: #e99922; }
 
 .border-primary {
   position: relative; }
@@ -1446,7 +1470,7 @@ h1, h2, h3, h4, h5,
     bottom: 0;
     width: 80px;
     height: 3px;
-    background: #46ddb0; }
+    background: #e99922; }
   .border-primary.text-center:after {
     left: 50%;
     -webkit-transform: translateX(-50%);
@@ -1480,7 +1504,7 @@ h1, h2, h3, h4, h5,
 .how-it-work-item .number {
   width: 50px;
   height: 50px;
-  background: #46ddb0;
+  background: #e99922;
   color: #fff;
   line-height: 55px;
   font-weight: 300;
@@ -1716,7 +1740,7 @@ h1, h2, h3, h4, h5,
     display: inline-block;
     width: 50px;
     height: 50px;
-    background: #46ddb0;
+    background: #e99922;
     margin-right: 1.5rem;
     border-radius: 50%;
     line-height: 50px;
@@ -1827,7 +1851,7 @@ h1, h2, h3, h4, h5,
 
 .section-sub-title {
   font-size: 13px;
-  color: #46ddb0;
+  color: #e99922;
   letter-spacing: .2em;
   text-transform: uppercase; }
 
