--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,12 @@ header {
   height: auto;
   margin-left: 0;}
 
+.logo-img2 {
+  width: 450px;
+  height: auto;
+  margin-left: 0;}
+}
+
 .logo-container {
   display: flex;
   align-items: center;
@@ -176,6 +182,49 @@ p.mb-5 {
   background-color: #E99922 !important; /* 滑鼠移過去變黃色 */
   color: #FFF !important;
 }
+
+.testimonial {
+  background-color: #f9f5f0;
+  min-height: 300px;
+  padding: 30px 25px;
+  border-radius: 15px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.testimonial .content-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+
+.testimonial h2 {
+  font-size: 1.75rem;
+  margin-bottom: 15px;
+  line-height: 1.4;
+}
+
+.testimonial p {
+  font-size: 1.25rem;
+  color: #514d47;
+  line-height: 1.8;
+  word-break: break-word;
+}
+
+/* 調整整體 slide 高度與上下區塊距離 */
+.testimonial-wrap {
+  padding-bottom: 40px;
+  margin-bottom: 30px;
+}
+
+.home-slider .owl-stage-outer {
+  padding-bottom: 10px;
+}
+
 
 a {
   -webkit-transition: .3s all ease;
@@ -1262,7 +1311,7 @@ h1, h2, h3, h4, h5,
     position: absolute;
     width: 30px;
     height: 30px;
-    background: #46ddb0;
+    background: #e99922;
     border-radius: 50%;
     color: #fff; }
     .player .team-number > span {
@@ -1297,7 +1346,7 @@ h1, h2, h3, h4, h5,
     border-radius: 50%;
     border: 1px solid #ccc; }
   .site-block-27 ul li.active a, .site-block-27 ul li.active span {
-    background: #46ddb0;
+    background: #e99922;
     color: #fff;
     border: 1px solid transparent; }
 
@@ -1429,7 +1478,7 @@ h1, h2, h3, h4, h5,
       transform: translate(-50%, -50%); }
 
 .free-quote {
-  background: #30d9a7; }
+  background: #e99922; }
   .free-quote .form-control {
     border: 2px solid rgba(255, 255, 255, 0.5);
     background: none;
@@ -1559,7 +1608,7 @@ h1, h2, h3, h4, h5,
   line-height: 40px;
   border-radius: 50%;
   display: inline-block;
-  background: #46ddb0;
+  background: #e99922;
   color: #fff; }
 
 .custom-pagination span {
@@ -1618,7 +1667,7 @@ h1, h2, h3, h4, h5,
     -o-transition: .1s all ease;
     transition: .1s all ease; }
   .popular-category:hover {
-    background: #46ddb0;
+    background: #e99922;
     -webkit-box-shadow: 0 5px 30px -5px rgba(70, 221, 176, 0.5);
     box-shadow: 0 5px 30px -5px rgba(70, 221, 176, 0.5); }
     .popular-category:hover .caption {
@@ -1669,7 +1718,7 @@ h1, h2, h3, h4, h5,
       font-size: 12px;
       display: inline-block;
       padding: 5px 30px;
-      background: #46ddb0;
+      background: #e99922;
       border-radius: 30px;
       color: #fff;
       letter-spacing: .2em;
@@ -1707,7 +1756,7 @@ h1, h2, h3, h4, h5,
         color: #fff; }
 
 .accordion-item[aria-expanded="true"] {
-  color: #46ddb0; }
+  color: #e99922; }
 
 .social-media {
   display: inline-block;
